# libcam-rtsp

./: CMakeLists.txt  README.md  camera.cpp  camera.hpp  decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  globals.hpp  iframe_sink.hpp  main.cpp  metadata.hpp  mmaped_dmabuf.cpp  mmaped_dmabuf.hpp  streamer.cpp  streamer.hpp  transcoder.cpp  transcoder.hpp
